<resources>
    <string name="app_name">CafeOrder</string>
    <string name="logo_description">Logo cafe</string>
    <string name="welcome">Welcome!</string>
    <string name="hint_name">Name:</string>
    <string name="hint_password">Password:</string>
    <string name="button_create_order">Create order</string>
    <string name="warning_fill_fields">All fields must be filled</string>
    <string name="hello_user">Hello, %s! What will you order?"</string>
    <string name="tea">tea</string>
    <string name="coffee">coffee</string>
    <string name="additions">What to add to %s?</string>
    <string name="milk">Milk</string>
    <string name="sugar">Sugar</string>
    <string name="lemon">Lemon</string>
    <string name="type_of_drink">Choose the type of drink</string>
    <string name="submit_order_button">submit order button</string>
    <string name="default_name">User</string>
    <string name="default_password">Password</string>
    <string name="order">Name: %s Password: %s  Drink: %s Type of drink: %s</string>
    <string name="need_additions">Addition:</string>

    <string-array name="options_of_coffee">
        <item>Americano</item>
        <item>Latte</item>
        <item>Espresso</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Black</item>
        <item>Green</item>
        <item>Read</item>
    </string-array>
</resources>
